Add C++ excludes to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,17 @@ nosetests.xml
 .mr.developer.cfg
 .project
 .pydevproject
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
