Add C excludes to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,21 @@ nosetests.xml
 *.lai
 *.la
 *.a
+
+# Object files
+*.o
+
+# Libraries
+*.lib
+*.a
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
